Update chromebook.sh